[package]
name = "pwn"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8.5"
hex = "0.4"
zeroize = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
whoami = "1.6.1"
rpassword = "7.4.0"
